# garments-pos-system

./: .env.example  AZURE_DEPLOYMENT.md  CORS_FIX_SOLUTION.md  DEPLOYMENT.md  DEPLOYMENT_PROGRESS.md  Dockerfile  EMAIL_VALIDATOR_FIX.md  EXISTING_SUPABASE_SETUP.md  FINAL_DEPLOYMENT_CHECKLIST.md  Garments_POS_API.postman_collection.json  NUMPY_PANDAS_FIX.md  README.md  RENDER_DEPLOYMENT_GUIDE.md  SUPABASE_SETUP.md  TESTING_GUIDE.md  WHATSAPP_SETUP.md  add_deployment_files.sh  add_description_column.py  add_gst_rate_column.py  asset-manifest.json  auth.py  build.sh  check_database_schema.py  config.py  create_admin.py  create_admin_direct.py  create_admin_remote.py  create_admin_simple.py  create_demo_data.py  create_test_data.py  database.py  deploy.sh  deploy_to_render.sh  docker-compose.yml  error_handler.py  index.html  main.py  ml_forecasting.py  models.py  open_supabase.py  (+28 more)
.github/workflows/: azure-deploy.yml  backend-azure-appservice.yml  frontend-azure-swa-simple.yml  frontend-azure-swa.yml  pre-deployment-tests.yml
LogFiles/: __lastCheckTime.txt
alembic/: env.py
pos-frontend/: .env  .env.production  FRESH_VERCEL_DEPLOYMENT_GUIDE.md  README.md  TROUBLESHOOTING_LOGIN.md  VERCEL_DEPLOYMENT_STATUS.md  debug_auth.js  debug_authentication.html  debug_frontend.html  deploy_to_vercel.sh  fresh_vercel_deploy.sh  package-lock.json  package.json  set_env.sh  staticwebapp.config.json  temp_env.txt  test_auth.html  test_brand_dealer_linking.js  test_frontend_auth.html
templates/: invoice_template.html  return_receipt_template.html  thermal_invoice_template.html
(+33 files in other folders)
